Archive2/bb/f2a2926f93f790/output
main.cpp: In constructor 'A::A()':
main.cpp:12:15: error: 'g' was not declared in this scope
             g();
               ^
main.cpp:13:15: error: 'k' was not declared in this scope
             k();
               ^
main.cpp: In function 'int main()':
main.cpp:22:11: error: 'g' was not declared in this scope
         g();
           ^
